Fixed CLI integration tests so that they run properly on Windows.
DAFFODIL-2058